# cmakebuildsystem

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.cpp
src/: main.rs
