[package]
name = "cmakebuildsystem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
reqwest = { version = "0.12.14", features = ["stream"] }
indicatif = "0.17.11"
url = "2.5.4"
zip = "2.2.3"
sevenz-rust = "0.6.1"
clap = { version = "4.5.32", features = ["derive"] }
once_cell = "1.21.1"